[gd_scene load_steps=47 format=3 uid="uid://ctj1spwblps66"]

[ext_resource type="Script" path="res://assets/scripts/player.gd" id="1_ikhbi"]
[ext_resource type="Texture2D" uid="uid://dw42y8qlvybbi" path="res://textures/characters/player/idle.png" id="2_urc0t"]
[ext_resource type="Texture2D" uid="uid://chyuvv41h6ygs" path="res://textures/characters/player/jump.png" id="3_o4nuv"]
[ext_resource type="Texture2D" uid="uid://4l0mpnd8y3ed" path="res://textures/characters/player/throw.png" id="4_02tpv"]
[ext_resource type="Texture2D" uid="uid://doasmp3ocm4tn" path="res://textures/characters/player/walking.png" id="4_cyirp"]
[ext_resource type="Texture2D" uid="uid://mh4dspkvi5lx" path="res://textures/characters/player/carrying.png" id="4_jqkwp"]
[ext_resource type="Texture2D" uid="uid://cs7ydmrssf1ub" path="res://textures/characters/player/carrying jump.png" id="5_johpb"]
[ext_resource type="Texture2D" uid="uid://c2qvwpqqw3htk" path="res://textures/characters/player/tank.png" id="6_yrmxm"]
[ext_resource type="Shader" path="res://assets/shaders/color_tint.gdshader" id="7_lpeor"]
[ext_resource type="Texture2D" uid="uid://cy0gx4gchlvsi" path="res://textures/objects/crate.png" id="8_jfvq3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rhnfn"]
shader = ExtResource("7_lpeor")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/tint_factor = 1.0
shader_parameter/fade = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_6v2ct"]
atlas = ExtResource("6_yrmxm")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryty2"]
atlas = ExtResource("6_yrmxm")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4elt"]
atlas = ExtResource("6_yrmxm")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwl1s"]
atlas = ExtResource("6_yrmxm")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyj3f"]
atlas = ExtResource("6_yrmxm")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjalk"]
atlas = ExtResource("6_yrmxm")
region = Rect2(384, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_c64tv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6v2ct")
}],
"loop": true,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryty2")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4elt")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwl1s")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyj3f")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjalk")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_8j6o5"]
offsets = PackedFloat32Array(0, 0.766234)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2tvje"]
gradient = SubResource("Gradient_8j6o5")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pgjdp"]
shader = ExtResource("7_lpeor")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/tint_factor = 0.0
shader_parameter/fade = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_q676h"]
atlas = ExtResource("6_yrmxm")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_n2dc4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q676h")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lgenu"]
shader = ExtResource("7_lpeor")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/tint_factor = 0.0
shader_parameter/fade = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_b7rds"]
atlas = ExtResource("4_jqkwp")
region = Rect2(64, 0, 64, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdixn"]
atlas = ExtResource("5_johpb")
region = Rect2(0, 0, 64, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_gc8sx"]
atlas = ExtResource("4_jqkwp")
region = Rect2(0, 0, 64, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gxsv"]
atlas = ExtResource("4_jqkwp")
region = Rect2(64, 0, 64, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnf6x"]
atlas = ExtResource("4_jqkwp")
region = Rect2(128, 0, 64, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_c60nx"]
atlas = ExtResource("4_jqkwp")
region = Rect2(192, 0, 64, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2jua"]
atlas = ExtResource("2_urc0t")
region = Rect2(0, 0, 64, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4ocf"]
atlas = ExtResource("3_o4nuv")
region = Rect2(0, 0, 64, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfalf"]
atlas = ExtResource("4_02tpv")
region = Rect2(0, 0, 64, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_sje64"]
atlas = ExtResource("4_02tpv")
region = Rect2(64, 0, 64, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwghb"]
atlas = ExtResource("4_cyirp")
region = Rect2(0, 0, 64, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_q631y"]
atlas = ExtResource("4_cyirp")
region = Rect2(64, 0, 64, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_myb3x"]
atlas = ExtResource("4_cyirp")
region = Rect2(128, 0, 64, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_fx0or"]
atlas = ExtResource("4_cyirp")
region = Rect2(192, 0, 64, 72)

[sub_resource type="SpriteFrames" id="SpriteFrames_8y6ks"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7rds")
}],
"loop": true,
"name": &"carrying idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdixn")
}],
"loop": true,
"name": &"carrying jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gc8sx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gxsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnf6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c60nx")
}],
"loop": true,
"name": &"carrying walk",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_urc0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2jua")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4ocf")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfalf")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_sje64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfalf")
}],
"loop": false,
"name": &"throw",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwghb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q631y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myb3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fx0or")
}],
"loop": true,
"name": &"walk",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ox8u1"]
size = Vector2(18, 57)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dn1vm"]
size = Vector2(28, 62.4326)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pm0cb"]
size = Vector2(18, 95)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_crlur"]
size = Vector2(18, 3)

[sub_resource type="Animation" id="Animation_ct2ne"]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TankSprite:material:shader_parameter/tint_factor")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ChainsSprite:material:shader_parameter/tint_factor")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite:material:shader_parameter/tint_factor")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_nlhdq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TankSprite:material:shader_parameter/tint_factor")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ChainsSprite:material:shader_parameter/tint_factor")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite:material:shader_parameter/tint_factor")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uyovr"]
_data = {
"Death": SubResource("Animation_ct2ne"),
"RESET": SubResource("Animation_nlhdq")
}

[node name="Player" type="CharacterBody2D" groups=["player", "puffTarget", "riding"]]
modulate = Color(0.759095, 0.759095, 0.759095, 1)
use_parent_material = true
collision_mask = 17
floor_constant_speed = true
floor_block_on_wall = false
platform_on_leave = 2
platform_floor_layers = 4294901760
script = ExtResource("1_ikhbi")
metadata/Player = true
metadata/puffTarget = true

[node name="TankSprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_rhnfn")
sprite_frames = SubResource("SpriteFrames_c64tv")
animation = &"5"

[node name="TankLight" type="PointLight2D" parent="."]
visible = false
position = Vector2(-16, -4.76837e-07)
scale = Vector2(7.18359, 6.28516)
color = Color(0.8, 0.980392, 1, 1)
energy = 0.5
range_layer_min = -512
range_layer_max = 512
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 1.0
texture = SubResource("GradientTexture2D_2tvje")

[node name="ChainsSprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_pgjdp")
sprite_frames = SubResource("SpriteFrames_n2dc4")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_lgenu")
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_8y6ks")
animation = &"idle"
autoplay = "idle"
speed_scale = 2.0

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_ox8u1")

[node name="IceSpikePosition" type="Marker2D" parent="."]
position = Vector2(24, 1)

[node name="IceSpikeCollideCheck" type="RayCast2D" parent="."]
position = Vector2(0, 1)
target_position = Vector2(40, 0)
collision_mask = 17

[node name="IceSpikeCooldown" type="Timer" parent="."]
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-2, 1.21629)
shape = SubResource("RectangleShape2D_dn1vm")

[node name="LadderCheck" type="RayCast2D" parent="."]
position = Vector2(0, -24)
target_position = Vector2(0, 56)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
position = Vector2(2, 0)
color = Color(0.870588, 1, 1, 1)
energy = 0.3
shadow_enabled = true
shadow_color = Color(0, 0, 0, 1)
shadow_filter = 2

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
position = Vector2(0, -48)
update_scale = false

[node name="putDownLoc" type="Node2D" parent="."]
position = Vector2(24, -16)

[node name="CarriedBoxCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -15.5)
shape = SubResource("RectangleShape2D_pm0cb")
disabled = true

[node name="boxPickupChecks" type="Node2D" parent="."]

[node name="1" type="RayCast2D" parent="boxPickupChecks"]
position = Vector2(-9, -32)
rotation = 3.14159
target_position = Vector2(0, 31)
collision_mask = 17
hit_from_inside = true

[node name="2" type="RayCast2D" parent="boxPickupChecks"]
position = Vector2(0, -32)
rotation = -3.14159
target_position = Vector2(0, 31)
collision_mask = 17
hit_from_inside = true

[node name="3" type="RayCast2D" parent="boxPickupChecks"]
position = Vector2(9, -32)
rotation = -3.14159
target_position = Vector2(0, 31)
collision_mask = 17
hit_from_inside = true

[node name="boxPutdownChecks" type="Node2D" parent="."]

[node name="RayCast2D2" type="RayCast2D" parent="boxPutdownChecks"]
position = Vector2(13, -31)
scale = Vector2(0.9, 0.9)
target_position = Vector2(28.8889, 0)
collision_mask = 17
hit_from_inside = true

[node name="RayCast2D" type="RayCast2D" parent="boxPutdownChecks"]
position = Vector2(13, -1)
scale = Vector2(0.9, 0.9)
target_position = Vector2(28.8889, 0)
collision_mask = 17
hit_from_inside = true

[node name="TopCollision" type="CharacterBody2D" parent="." groups=["strong"]]
position = Vector2(0, -30)
collision_layer = 2
collision_mask = 16
motion_mode = 1
platform_on_leave = 2
platform_floor_layers = 4294967040

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopCollision"]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_crlur")
one_way_collision = true

[node name="Box_Picking_Center" type="Node2D" parent="."]
position = Vector2(1, -13)

[node name="BoxShadow" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.427451)
self_modulate = Color(1, 0.694118, 1, 1)
show_behind_parent = true
position = Vector2(24, 23)
texture = ExtResource("8_jfvq3")

[node name="shadow_casts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="shadow_casts"]
position = Vector2(24, -16)
target_position = Vector2(0, 55)
collision_mask = 17

[node name="RayCast2D2" type="RayCast2D" parent="shadow_casts"]
position = Vector2(38, -16)
target_position = Vector2(0, 55)
collision_mask = 17

[node name="RayCast2D3" type="RayCast2D" parent="shadow_casts"]
position = Vector2(10, -16)
target_position = Vector2(0, 55)
collision_mask = 17

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uyovr")
}

[connection signal="animation_changed" from="PlayerSprite" to="." method="_on_animated_sprite_2d_animation_changed"]
[connection signal="animation_finished" from="PlayerSprite" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="input_event" from="Hitbox" to="." method="_on_hitbox_input_event"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
